* Jun 25 2001 hship

VlibBeans:
- Add IOperations.updatePublishers()

Vlib:
- Add EditPublishers and TransferBooks admin pages.
- Add EditUsers page (not yet implemented).

* Jun 22 2001 hship

VlibBeans:
- Cleanup Operations bean to not return entity references to the
  presentation layer.  
- Finish configuring MailQueue and MailSender beans.
- Send mail when book is borrowed or returned.
  
Vlib:
- Adjust for changes to Operations bean.
- Fiddle with styles and such.
- Add better error reporting capabilities.

* Jun 21 2001 hship

Vlib:
- More changes to survive RemoteException failures.
- Start applying the Primix-branded look and feel.

VlibBeans:
- Switch from ObjectMessage to MailMessage for the MailQueueBean.

* Jun 20 2001 hship

Simplify the Browser, to match the upcoming UI.
Lots of small changes to make the application robust, even when jBoss bounces.

* Jun 19 2001 hship

Use a Browser on the PersonPage.  Clean up some redundant code.

* Jun 18 2001 hship

Vlib:
- Split "MyBooks" page into "MyLibrary" and "BorrowedBooks".

Tutorial:
- Set fixed pixel width for Palette buttons.

* Jun 14 2001 hship

VlibBeans:
- Move the implementations into the (new) com.primix.vlib.ejb.impl package.

* Jun 8 2001 hship

Vlib:
- Add a new Browser component, used to page through book query results
- Use the Browser on Matches and (twice) on MyBooks

* Jun 7 2001 hship

VlibBeans:
- Add Book.hidden, Book.lendable, Person.verified, Person.locked_out and Person.admin to
  the Vlib database.
- Ship the InstantDB examples JAR, so we can easily run the command-line tool.

Vlib:
- Update UI to reflect the changes in the schema.
- Run in a stateless mode initially.
- Add the 'sticky' parameter to the Border component.
- Return to the Matches page after logging in (via the Login link).
- Rename the Home page to '[Search]' on the navigation bar.
- Improve the Makefile run target to search the source directory first on the classpath.

* May 31 2001 hship

Vlib: