@@ -1,0 +1,71 @@
+
+<html>
+<!-- $Id$ -->
+<head>
+<title>Tapestry Tutorial</title>
+</head>
+<body>
+<h1>Tapestry Tutorial</h1>
+<p>Please select one of the following Tapestry applications from the tutorial:
+<table border="0">
+	<tr valign="top">
+		<th><a href="hello">Hello World</a>
+		</th>
+		<td>A very basic "Hello World" application.
+		</td>
+	</tr>
+	<tr valign="top" bgcolor="silver">
+		<th><a href="simple">Simple</a>
+		</th>
+		<td>Shows simple dynamic behaviors, on a single page.
+		</td>
+	</tr>
+	<tr valign="top">
+		<th><a href="adder">Adder</a>
+		</th>
+		<td>A very simple adding machine; shows off simple form input and validation, an the
+    use of a Foreach to iterate over a result set.
+		</td>
+	</tr>
+	<tr valign="top" bgcolor="silver">
+		<th><a href="hangman">Hangman</a>
+		</th>
+		<td>Basic implementation of the game of Hangman.  Guess letters one at a time
+    until you run out of guesses, or determine the secret word.  More advanced use of forms,
+    as well as a Direct inside a Foreach.
+		</td>
+	</tr>
+	<tr valign="top">
+		<th><a href="border">Border</a>
+		</th>
+		<td><img align="right" border="0" hspace="4" src="images/show-inspector-button.jpg">An example of a useful, reusable component, a common navigation border for a set of pages.
+<p>In addition, the tapestry Inspector makes its
+    first appearance.  This is a built-in mini-application that allows you to view how a running
+    application is constructed.  Check it out --- its the most impressive demo here.
+		</td>
+	</tr>
+	<tr valign="top" bgcolor="silver">
+		<th><a href="survey">Survey</a>
+		</th>
+		<td>More advanced form handling demonstration, in a simulated database-driven application.
+		</td>
+	</tr>
+	<tr valign=top>
+        <th><a href="locale">Locale</a></th>
+        <td>A demonstration of how Tapestry automatically handles localization/internationalization.
+        </td
+     </tr>
+     <tr valign=top bgcolor=silver>
+        <th><a href="valid">Valid</a></th>
+        <td>A demonstration (well, more of a testing ground) of the validating text fields, including the new (as of release 1.0.1)
+        NumericField.</td>
+      </tr>
+      
+  <tr valign=top>
+        <th><a href="portal">Portal</a></th>
+        <td>An example of how Tapestry can be used to build data-driven Portals.</td>
+      </tr>
+      </table>
+
+</body>
+</html>
