@@ -1,0 +1,10 @@
+<?xml version="1.0"?>
+<!DOCTYPE wml PUBLIC "-//PHONE.COM//DTD WML 1.1//EN"
+          "http://www.phone.com/dtd/wml11.dtd">
+<wml>
+	<card id="Hello">
+		<p>
+	  Welcome to your first wap/wml application.
+	</p>
+	</card>
+</wml>
